2008-03-18 Roman
- FIX:/DAQ/JavaLikeCalc: Logical operation return to boolean is fixed.
- FIX:/UI/Vision: Size points first appearance time wait is added (500ms). For mouse release event lost prevention.
- !!:/UI/WebVision: Documentation and translation is updated and version 0.3.0 is relised.


2008-03-17 Roman
- !:/UI/VCAEngine: Child widget remove is made optimal. Remove full check IO table.
- /UI/Vision: Remove Project and Widget libraries updating on time child widgets changing.
- !!:/UI/Vision: Documentation and translation is updated and version 0.6.0 is relised.


2008-03-16 Roman
- !!:/SYS: Resource files (icons and menu links) for menu OpenSCADA execution is added.
- /SYS: RPM spec file is updated for new resources file support.
- !!:/SYS/Node: TCntrNode::nodeDel() finction is added.
- FIX:/UI/VCAEngine: Self widget attributes deletion on object destroy is fixed.
- FIX:/UI/VCAEngine: No deletion inheritor widgets on time of parent widget deletion is fixed
- /UI/Vision: Widget's level icons is changed.
- !!!:/UI/Vision: Development widget update on time included widgets insert/delete is made performance optimal.
- !:/UI/Vision: Inserted widgets into development widget selection is added.
- !!!:/UI/VCAEngine, /UI/Vision, /UI/WebVision: Font size dimension changed from punct to pixels.


2008-03-13 Roman
- FIX:/Archive/Value: Value's trend paint is fixed and updated.
- FIX:/UI/Vision: Trends painter and data loader of primitive 'Diagram' is fixed.
- FIX:/UI/WebVision: Trends painter and data loader of primitive 'Diagram' is fixed.
- FIX:/UI/WebVision: Disabled trends updating is fixed.


2008-03-11 Roman
- !:/Value: The reserve field type is changed to string.
- !!:/DAQ/BlockCalc: Documentation and translation is updated and version 1.0.1 is relised.
- !!:/DAQ/BlockCalc: A parameter addressation to blocks IO is changed to direct block's IO list. It's allow for control attributes id and name.