@@ -579,7 +579,7 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"    if( this.attrs['bordColor'] ) elStyle+='border-color: '+this.attrs['bordColor']+'; ';\n"
 	"    while(this.place.childNodes.length) this.place.removeChild(this.place.childNodes[0]);\n"
 	"    var medObj = document.createElement('img');\n"
-	"    medObj.src = '/"MOD_ID"'+this.addr+'?com=res&val='+this.attrs['src'];\n"
+	"    medObj.src = this.attrs['src'].length ? ('/"MOD_ID"'+this.addr+'?com=res&val='+this.attrs['src']) : '';\n"
 	"    medObj.border = 0;\n"
 	"    if( this.attrs['fit'] == 1 ) { medObj.width = geomW; medObj.height = geomH; }\n"
 	"    if( parseInt(this.attrs['active']) )\n"
@@ -599,20 +599,13 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"          }\n"
 	"          arObj.coords = this.attrs['area'+i+'coord'];\n"
 	"          arObj.title = this.attrs['area'+i+'title'];\n"
-	"          arObj.href = \"javascript:setWAttrs(this.wdgLnk.addr,'event','ws_ImgPress\"+i+\"');\"\n"
+	"          arObj.href = \"javascript:setWAttrs(this.wdgLnk.addr,'event','ws_MapAct\"+i+\"Left');\"\n"
+	"          arObj.wdgLnk = this;\n"
 	"          mapObj.appendChild(arObj);\n"
 	"        }\n"
 	"        this.place.appendChild(mapObj);\n"
 	"        medObj.setAttribute('usemap','#'+this.addr);\n"
 	"        this.place.appendChild(medObj);\n"
-	"      }\n"
-	"      else\n"
-	"      {\n"
-	"        var aObj = document.createElement('a');\n"
-	"        aObj.wdgLnk = this;\n"
-	"        aObj.href = \"javascript:setWAttrs(this.wdgLnk.addr,'event','ws_ImgPress');\"\n"
-	"        aObj.appendChild(medObj);\n"
-	"        this.place.appendChild(aObj);\n"
 	"      }\n"
 	"    }\n"
 	"    else this.place.appendChild(medObj);\n"	
